Add search endpoint, fix error and refactor
